# Comsol-CLI

./: .gitignore  README.md  build.ps1  cell.mph  interface.py  main.py  model.py  paper.md  play.ipynb  pyproject.toml  requirements.txt
.github/workflows/: exe_build_action.yml  main.yml  windows_build_action.yml
config/: cell.yaml  cell1.yaml  cell2.yaml  cell_local.yaml
notebooks/: mlp_stats.ipynb  plot_bds.ipynb  test_bd_dataset.ipynb
notebooks/plots/: band.ipynb  band_gap.ipynb  band_vis.ipynb  config.py  fitness.ipynb  loss.ipynb  mlp.ipynb  r_2.ipynb  sensitive.ipynb  transparence.ipynb
notebooks/plots/bands/: 单元原参数.csv  单元调参.csv  带隙.csv  能带示例1.csv  能带示例2.csv  能带示例3.csv
notebooks/plots/loss/: losses.pkl
notebooks/plots/trans/: 原参数透射.csv  组合透射.csv  调参透射.csv
src/: interface.py  main.py  model.py  requirements.txt  utils.py
src/comsol/: cmdline.py  csv.py  csvparse.py  data_to_csv.py  datasets.py  exps.py  ga.py  interface.py  model.py  preprocess.py  sensitive.py  utils.py
tests/: test_utils.py
