[tool.poetry]
name = "comsol"
version = "0.1.0"
description = ""
authors = ["banananafish <darkbananafish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
MPh = "^1.2.3"
numpy = "^1.26.4"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
